# market-intelligence

./: .env.example  .gitignore  .vercelignore  ADDENDUM-ARCHITECTURE-SECTIONS-STATIQUES.md  ANALYSE-ADAPTATION-PROPOSITIONS-STANDARD.md  ANALYSE-FONCTIONNALITES-COMPETITEURS-MODERNE.md  ANALYSE-MARCHE-COMPOSANTES-PROPOSITIONS.md  CLAUDE.md  CONFIGURABLE_PROMPTS_SYSTEM.md  CORRECTIONS_DESIGN_SYSTEM.md  DEPLOIEMENT_PRODUCTION.md  DEPLOIEMENT_RAPIDE.md  DEPLOYMENT-STATUS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PRODUCTION_2025.md  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_VERIFICATION.md  DESCRIPTIF-MARKETING.md  DOCUMENTATION.md  EXECUTIVE_SUMMARY_RAG_OPTIMISATION.md  FILE_STRUCTURE.md  FIX_NO_ACTIVE_COMPANY.md  FIX_UPLOAD_TIMEOUT.md  GUIDE_UTILISATEUR_RAG.md  IMPLEMENTATION-COMPLETE.md  IMPLEMENTATION_BULK_GENERATION.md  INTELLIGENT_ANALYSIS_SYSTEM.md  MARKETING.md  MIGRATION_ROADMAP.md  MISE-A-JOUR-UX-SECTIONS-STATIQUES.md  MULTI_TENANCY_AUDIT.md  NEWmethopricinganalysis.md  NOUVELLES_FONCTIONNALITES.md  PHASE_0.5_COMPLETION_SUMMARY.md  PHASE_1_TEST_SUMMARY.md  PHASE_3_TEST_INFRASTRUCTURE.md  PLAN-DEVELOPPEMENT-CONSOLIDE.md  PLAN-IMPLEMENTATION-RFP-CHIRURGICAL.md  PLAN-TEST-RFP-HISTORIQUE.md  (+60 more)
backend/: .env.example  .gitignore  Dockerfile  README.md  RUN_TESTS.md  TESTS_SUCCESS_REPORT.md  TEST_EXECUTION_RESULTS.md  TEST_PLAN.md  TEST_RESULTS.md  pyproject.toml  pytest.ini
backend/app/: __init__.py  config.py  main.py
backend/tests/: __init__.py  conftest.py  test_api_chat.py  test_api_documents.py  test_document_processor.py  test_embedding_service.py  (+1 more)
(+702 files in other folders)
